updated login to  home url

--- a/login.html
+++ b/login.html
@@ -6,7 +6,7 @@
 </head>
 	<body>
 		    Login<br>
-			<a href="home.html">Home</a><br>
+			<a href="/">Home</a><br>
 			<a href="About.html">About</a>
 			
 			<section>
